@@ -17,7 +17,7 @@
 }
 \usage{
 \method{screeplot}{cca}(x, bstick = FALSE, type = c("barplot", "lines"),
-         npcs = min(10, if (is.null(x$CCA)) x$CA$rank else x$CCA$rank),
+         npcs = min(10, if (is.null(x$CCA) || x$CCA$rank == 0) x$CA$rank else x$CCA$rank),
          ptype = "o", bst.col = "red", bst.lty = "solid",
          xlab = "Component", ylab = "Inertia",
          main = deparse(substitute(x)), legend = bstick,
